--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-    position: absolute;
+    position: fixed;
     top: 0;
     width: 100%;
     height: 70px;
@@ -11,6 +11,19 @@
     box-sizing: border-box;
     backdrop-filter: blur(8px);
     z-index: 5;
+    transition: all 0.3s ease;
+}
+
+.navbar.shrink {
+    height: 50px;
+    padding: 0 30px;
+    background: rgba(15, 15, 15);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+}
+
+.navbar.shrink .logo {
+    font-size: 1rem;
+    transition: font-size 0.3s ease;
 }
 
 .nav-center {
