--- a/src/styles/SongPage.css
+++ b/src/styles/SongPage.css
@@ -122,15 +122,6 @@
     display: inline-block;
 }
 
-.song-cover {
-    width: 250px;
-    height: 250px;
-    border-radius: 20px;
-    object-fit: cover;
-    z-index: 1;
-    position: relative;
-}
-
 .glow {
     position: absolute;
     inset: -10px;
@@ -140,6 +131,7 @@
     background: linear-gradient(45deg, var(--accent), var(--dark-accent));
     filter: blur(5px);
     transition: opacity 0.4s ease;
+    z-index: -1;
 }
 
 .glow.active {
@@ -177,7 +169,7 @@
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
 }
 
-.song-cover {
+.song-cover-main {
     width: 300px;
     height: 300px;
     border-radius: 16px;
