--- a/src/styles/SongPage.css
+++ b/src/styles/SongPage.css
@@ -22,15 +22,18 @@
 }
 
 .right-playlist {
-    width: 200px;
-    height: 100%;
+    width: 240px;
+    height: calc(80vh - 6rem);
     overflow-y: auto;
     overflow-x: hidden;
     background: var(--card);
-    backdrop-filter: blur(8px);
-    border-left: 1px solid var(--primary);
-    margin-top: 4.3rem;
+    backdrop-filter: blur(10px);
+    border-radius: 20px;
+    border: 1px solid var(--primary);
+    margin-top: 6rem;
+    margin-right: 100px;
     padding: 20px;
+    box-shadow: 0 0 25px rgba(0, 0, 0, 0.45);
     z-index: 3;
     flex-shrink: 0;
 }
