--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,6 +17,16 @@
     --inverse: #0c1018;
 }
 
+html, body {
+    overflow: auto;
+    scrollbar-width: none;
+}
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+    display: none;
+}
+
 body {
     background-color: var(--bg);
     color: var(--main-text);
