--- a/src/styles/admin/ManageSongs.css
+++ b/src/styles/admin/ManageSongs.css
@@ -93,7 +93,7 @@ th, td {
     border-radius: 6px;
 }
 
-.actions button {
+.manage-actions button {
     margin-right: 0.5rem;
     background: none;
     border: none;
@@ -102,8 +102,8 @@ th, td {
     transition: 0.2s;
 }
 
-.actions .edit-btn:hover,
-.actions .delete-btn:hover {
+.manage-actions .edit-btn:hover,
+.manage-actions .delete-btn:hover {
     background: none;
     color: var(--dark-accent);
 }
