--- a/src/styles/components/Navbar.css
+++ b/src/styles/components/Navbar.css
@@ -136,7 +136,7 @@
         top: 55px;
         right: -100%;
         width: 200px;
-        height: 15rem;
+        height: auto;
         background: rgba(15, 15, 15, 0.95);
         flex-direction: column;
         gap: 3rem;
@@ -162,6 +162,20 @@
     .connect-wallet-btn button {
         padding: 8px 16px;
         font-size: 0.9rem;
+    }
+
+    .connected-navbar ul {
+        position: fixed;
+        top: 3.2rem;
+        right: -100%;
+        width: 200px;
+        height: auto;
+        background: rgba(15, 15, 15, 0.95);
+        flex-direction: column;
+        gap: 3rem;
+        align-items: flex-start;
+        padding: 20px 0;
+        transition: right 0.3s ease;
     }
 }
 
