--- a/src/styles/pages/SongPage.css
+++ b/src/styles/pages/SongPage.css
@@ -43,8 +43,8 @@
     position: absolute;
     top: 5rem;
     left: 2rem;
-    background: var(--highlight);
-    color: var(--inverse);
+    background: var(--accent);
+    color: var(--main-text);
     border: none;
     border-radius: 10px;
     padding: 10px 20px;
@@ -56,7 +56,7 @@
 }
 
 .back-btn:hover {
-    background: var(--primary);
+    background: var(--dark-accent);
     color: var(--main-text);
 }
 
@@ -266,15 +266,21 @@
     }
 
     .right-playlist {
+        display: flex;
         width: 97%;
         height: auto;
         max-height: 300px;
         margin-bottom: 11rem;
+        overflow-y: hidden;
         overflow-x: auto;
         flex-direction: row;
         gap: 10px;
         padding: 10px;
         border-radius: 15px;
+    }
+
+    .right-playlist > * {
+        flex: 0 0 auto;
     }
 
     .song-cover-main {
