--- a/src/pages/Songpage/SongPage.scss
+++ b/src/pages/Songpage/SongPage.scss
@@ -3,17 +3,19 @@
 .song-page {
     display: flex;
     flex-direction: row;
-    gap: 40px;
+    gap: 30px;
     padding: 40px;
     padding-top: 5rem;
     padding-bottom: 6rem;
+    justify-content: center;
     
     .song-content {
-        flex: 1;
+        flex: 0 1 auto;
+        min-width: 600px;
         display: flex;
         gap: 20px;
         align-items: center;
-        justify-content: center;
+        justify-content: flex-start;
         max-height: calc(100vh - 260px);
         border-radius: 20px;
         padding: 40px;
@@ -53,6 +55,12 @@
         .song-info {
             max-width: 400px;
             z-index: 1;
+            position: relative;
+            padding-bottom: 50px;
+
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             
             h1 {
                 font-size: 2rem;
@@ -122,7 +130,38 @@
                     background: $accent-color;
                 }
             }
+        }
+
+        .songpage-btn-wrapper {
+            position: absolute;
+            bottom: 15px;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            gap: 25px;
+            z-index: 10;
             
+            .songpage-action-btn {
+                background: none;
+                border: none;
+                color: $main-text-color;
+                cursor: pointer;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+
+                &:active {
+                    color: $accent-color;
+                }
+
+                &.saved {
+                    color: $accent-color;
+                }
+
+                svg {
+                    display: block;
+                }
+            }
         }
         
         .neon-btn {
